Second_Step/data/extract_data_vpl/45/238/grade_comments.txt
-The compilation or preparation of execution has failed
Executable.java:25: error: cannot find symbol
        sortBubble(a);
        ^
  symbol:   method sortBubble(int[])
  location: class Executable
Tools.java:20: error: non-static method echange(int[],int,int) cannot be referenced from a static context
                    echange(tab,i,j);
                    ^
2 errors
Not compiled
